--- a/til/2025/springmvc/2025-04-22.md
+++ b/til/2025/springmvc/2025-04-22.md
@@ -1,51 +1,52 @@
 # TIL - 2025-04-22
-### Spring-MVC Day1
+### Spring-MVC Day2
 
-## 📌 Spring MVC 프로젝트 기본 셋팅
+## 📌 Domain Entity 만들기
 
-- Java + Maven 기반 프로젝트 생성
-- webapp 디렉토리 수동 생성
-- resources - application.properties 수동 생성
-- app(controller(api, web), model), infra 패키지 구조 잡기
-- tomcat 연결 및 test index page, indexController 생성
+- Spring + JPA 에 맞게 POM.XML 디펜던시 수정
+- domain 패키지 구성
+- 기능별 Entity
 
 ---
 
 ## ✍️ Today I Learned
 
-- `web.xml` | 서버가 가장 먼저 읽는 "설정 파일"
-    - SpringBoot는 자동으로 해주는 거^^
-    - ContextLoaderListener 등록 : 작성된 경로의 root-context 등의 설정을 읽고, root applicationContext 생성
-    - DispatcherServlet 생성 및 초기화 : 모든 요청을 최초로 받아서(가로채서) Controller에 넘기는 애
-    - error-page 경로 지정 
+- `.domain` | 프로젝트 구조 잡기
+    - JPA에서는 Dto나 VO가 아니라 Entity로 필드를 관리
+    - 따라서 하나의 기능 객체로 다뤄지기 때문에 model에 두는 게 아니라, domain 패키지에서 기능별로 다뤄질 수 있도록 구조 조정 
   
 
-- `WEB-INF/spring/` | XML 설정 분리
-    - root-context.xml : 톰캣 시작 시, ContextLoaderListenner가 로딩
-      - 역할 : Service, Repo 등 공통 설정
-      - 전역 설정 파일 root ApplicaitonContext
-    - servlet-context.xml : 서블릿 초기화 시, DispatcherServlet이 로딩
-      - 역할 Controller, View 등 웹 설정(multipart 처리도 포함)
-      - 특히 뷰리졸브를 여기서 설정
-  
+- 기본 어노테이션
+    - `@Id` `@GeneratedValue`
+      - PK임을 선언하기 위한 어노테이션
+      - auto_increment와 유사
+    - `@Data` vs `@Getter` + `@Setter` + `@ToString`
+      - `@Data` : `@EqualsAndHashCode` `@RequiredArgsConstructor` 등도 포함
+      - 예민한 데이터가 포함된 엔티티라면 Data보단 따로 선언해주는 방식으로 처리!
+      - lombok 기능
+    - `@DynamicInsert` `@DynamicUpdate`
+      - Hibernate 기능
+      - `null`, 기본값 필드를 자동으로 할당하기 위한 것
+      - `@Colum(columDefinition = "timestamp default now()"`
+      - `insert` 시 값을 넣지 않으면 default가 적용되게끔 하는 것!
+      - 이때 `@Dynamic~` 이 엔틴티 선언부에 선언되어 있어야 함
+      - 내가 제일 신기하고 좋아했던... 어노테이션
 
-- `application.properties` | 외부에서 분리할 수 있다던 그 설정값!!!
-    - `${upload.path}` 경로 지정
-    - servlet-context.xml에서 property-placeholder로 연동
-      - <context:property-placeholder location="classpath:application.properties"/>
-
-
-
-- src 프로젝트 뼈대 구성
-  - app
-    - controller
-      - api
-      - web
-    - model
-  - infra
+- modifyPassword | 도메인 내부 메서드
+    - 객체로서 존재하는 도메인에 대해 비즈니스 로직으로 규칙을 부여한 것
+    - 조금 더 탐색이 필요해 보인다...
 
 ---
 
 ## 🗂️ 조금 더 탐색하기
+- setter vs 도메인 내부 메서드 vs form 검증
+- 디폴트값을 정하는 방식
+  - 생성자, `@Colum(columDefinition)`, 필드 초기화
 
-- DispatcherServlet은 ApplicationContext랑 어떻게 연결되는 건지
+
+---
+
+내일 할 일
+- Rent/RentBook 마저 공부 
+- 연관관계 이슈라.. 잇몸이 쑤시는 관계로 오늘은 gg...
+- 어려운 게 아닌데 오늘 조금 힘들다~!
